--- a/demo2.html
+++ b/demo2.html
@@ -86,7 +86,7 @@
 
         <div class="super-wrapper">
             <div class="wrapper">
-                <vee-dee-oh id="video" poster="http://www.videojs.com/img/poster.jpg" impl="flash">
+                <vee-dee-oh id="video" poster="http://www.videojs.com/img/poster.jpg">
                     <source type="video/mp4"  src="http://vjs.zencdn.net/v/oceans.mp4">
                     <source type="video/webm" src="http://vjs.zencdn.net/v/oceans.webm">
                 </vee-dee-oh>
