trying to make android play hls

--- a/demo1.html
+++ b/demo1.html
@@ -5,6 +5,8 @@
 
         <title>vee-dee-oh element demo 1</title>
 
+        <meta name="viewport" content="width=device-width, user-scalable=yes">
+
         <!-- Importing Web Component's Polyfill -->
         <script src="ext/platform.js"></script>
         <script src="ext/SWF.js"></script>
